FIx icon spacing

--- a/src/components/Icons/Icons.css
+++ b/src/components/Icons/Icons.css
@@ -9,8 +9,10 @@
 }
 
 .icons-container {
-    grid-template-columns: repeat(5, 20%);
-    display: grid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 1800px) {
@@ -40,22 +42,26 @@
     }
 }
 
-.icons-container a { 
+.icons-container a {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: flex-end;
     flex-wrap: wrap;
     align-items: center;
-    padding: 6px;
+    padding: 6px 15px 6px 15px;
     border: 3px solid black;
     margin: 10px;
     text-decoration: none;
     background-color: white;
     border-radius: 20px;
+    max-width: 550px;
+    min-height: 540px;
 }
 
 .imageCard {
     position: relative;
+    min-height: 450px;
     top: -19px;
     width: 300px;
     margin-top: 15px;
@@ -63,9 +69,12 @@
 }
 
 h3 {
-    overflow: hidden;
+    width: 300px;
     text-overflow: ellipsis;
     color: black;
+    position: absolute;
+    top: 4%;
+    margin-top:0;
 }
 
 .icons-container a:hover {
